--- a/Week05/HW-05.ipynb
+++ b/Week05/HW-05.ipynb
@@ -17,7 +17,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "8ZYbzYZH2nH8",
-        "outputId": "0af048a3-0d05-42e5-ba7f-65c3cdc142d2",
+        "outputId": "7d6b7c78-551e-4945-b033-38b68f8cb9bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
@@ -72,7 +72,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea23277d-52be-49fc-a7ee-94ea6e6811c6\">\n",
+              "  <div id=\"df-2d51f812-dc9d-4c96-b942-f88773c67791\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -227,7 +227,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea23277d-52be-49fc-a7ee-94ea6e6811c6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d51f812-dc9d-4c96-b942-f88773c67791')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -278,12 +278,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea23277d-52be-49fc-a7ee-94ea6e6811c6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2d51f812-dc9d-4c96-b942-f88773c67791 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea23277d-52be-49fc-a7ee-94ea6e6811c6');\n",
+              "          const element = document.querySelector('#df-2d51f812-dc9d-4c96-b942-f88773c67791');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -329,7 +329,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZpJFdcHWUlo",
-        "outputId": "b0d75770-db0c-4f4d-e931-23e6708fa455"
+        "outputId": "3c7b18d7-92f6-4a33-acaf-7f5490059639"
       },
       "execution_count": 2,
       "outputs": [
@@ -378,7 +378,7 @@
           "height": 361
         },
         "id": "X9peD1saWXPy",
-        "outputId": "304a2f09-2ac3-498e-c9bc-d611a4a063f2"
+        "outputId": "30d2e93c-4491-4792-d881-76cd4d69ea61"
       },
       "execution_count": 3,
       "outputs": [
@@ -438,7 +438,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6ab298f2-ee03-4dee-8882-d2fe3cda667f\">\n",
+              "  <div id=\"df-34e5afdf-76e2-418d-8f4a-5dc2836ce4bd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -605,7 +605,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ab298f2-ee03-4dee-8882-d2fe3cda667f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34e5afdf-76e2-418d-8f4a-5dc2836ce4bd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -656,12 +656,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6ab298f2-ee03-4dee-8882-d2fe3cda667f button.colab-df-convert');\n",
+              "          document.querySelector('#df-34e5afdf-76e2-418d-8f4a-5dc2836ce4bd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6ab298f2-ee03-4dee-8882-d2fe3cda667f');\n",
+              "          const element = document.querySelector('#df-34e5afdf-76e2-418d-8f4a-5dc2836ce4bd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -737,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8l607wBZW3V0",
-        "outputId": "b65309b2-09ae-4ec3-f4cd-97fbba274561"
+        "outputId": "5d0a0f53-6662-4fae-a64e-b4e262ba02e6"
       },
       "execution_count": 4,
       "outputs": [
@@ -763,7 +763,7 @@
         "id": "BzCHO8If2nH_"
       },
       "source": [
-        "Insert comments here"
+        "There are frequency of 500 for each unique fields. That means there are no Imbalances"
       ]
     },
     {
@@ -807,7 +807,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B34ilX-JYZZ1",
-        "outputId": "d2ecfe34-0ea9-452a-ec9f-dd78ee68172c"
+        "outputId": "74d58a6d-ab24-4669-bb1b-70a168f8ec76"
       },
       "execution_count": 6,
       "outputs": [
@@ -834,7 +834,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kzTrkei0X-HK",
-        "outputId": "36e79b2b-7ad8-465d-ccaf-7ba90751af56"
+        "outputId": "a7668230-c265-4587-f3e2-0eabcca21eb7"
       },
       "execution_count": 7,
       "outputs": [
@@ -892,7 +892,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dp8OTPGWYbNW",
-        "outputId": "23fc4f0c-3dde-4588-eff6-3011df09d9ee"
+        "outputId": "b176c080-ebe1-4c74-f698-038c40a75ae4"
       },
       "execution_count": 8,
       "outputs": [
@@ -1030,9 +1030,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65DSuifxcp8d",
-        "outputId": "4f7e6192-f7b1-4722-aeaf-2a290ff79e1b"
+        "outputId": "6e1636b7-c62e-4cc3-d9c3-f9920196e18c"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1064,7 @@
         "id": "Q2JBZXZr2nIC"
       },
       "source": [
-        "Insert comments here"
+        "The report on variance inflation factor suggests that none of the columns have a high VIF value, which is typically considered to be 5 or more. Therefore, based on this information, the decision was made not to remove any columns due to collinearity."
       ]
     },
     {
@@ -1087,7 +1087,7 @@
       "metadata": {
         "id": "cyY879tiZG0n"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1108,7 +1108,7 @@
       "metadata": {
         "id": "iGdwwKNaZYiy"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1144,7 +1144,7 @@
       "metadata": {
         "id": "XNEOd7JLZeKa"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1155,7 +1155,7 @@
       "metadata": {
         "id": "YjG14cW9Zg_O"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1166,7 +1166,7 @@
       "metadata": {
         "id": "qLHXAMkMZjvM"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1179,9 +1179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XylPF5IiZl2-",
-        "outputId": "c200a4b8-14bc-4ed5-c676-d72739ae52b5"
+        "outputId": "5e686c5f-5961-49df-d8ba-463aed7546ea"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,7 +1191,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -1216,7 +1216,7 @@
       "metadata": {
         "id": "65-3Ap5_ZqAP"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1235,9 +1235,9 @@
           "height": 222
         },
         "id": "ksdFwRArZsX7",
-        "outputId": "5b247657-fa88-49eb-ea30-e7e4584db3cc"
+        "outputId": "1158d20b-8296-4681-828c-d61aec8f2d77"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1351,7 +1351,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 17
         }
       ]
     },
@@ -1363,7 +1363,7 @@
       "metadata": {
         "id": "VZpnXr-IZwjy"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1380,9 +1380,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1cIqzOGaDct",
-        "outputId": "f02ef0d2-cd3e-4cd1-fafa-d69f6083cf8e"
+        "outputId": "809d1494-e443-496f-bb3b-ac8cd335e212"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,9 +1406,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ulvg_I9xaRnQ",
-        "outputId": "90f9d54b-042b-4190-ec13-5a862270b277"
+        "outputId": "094a8861-226f-4348-df96-dd2cf387eb71"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,7 +1425,7 @@
         "id": "Hbd0vMq-2nIE"
       },
       "source": [
-        "Insert comments here"
+        "Upon careful analysis, there does not seem to be any evidence of overfitting. While there may be a difference of 5-7%, this alone is not enough to definitively indicate overfitting."
       ]
     },
     {
@@ -1446,15 +1446,6 @@
       "source": [
         "For further development of a model, we can prevent overfitting by using regularization techniques. Overfitting occurs when a model learns to fit the training data too closely and fails to generalize well to new data. Regularization helps to prevent this by adding a penalty term to the model's objective function, which discourages it from fitting the training data too closely."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jPrL6zum2nIF"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
